--- a/ghc-paths.cabal
+++ b/ghc-paths.cabal
@@ -1,5 +1,5 @@
 name: ghc-paths
-version: 0.1.0.6
+version: 0.1.0.7
 license: BSD3
 license-file: LICENSE
 copyright: (c) Simon Marlow
@@ -9,8 +9,14 @@ stability: stable
 synopsis: Knowledge of GHC's installation directories
 description: Knowledge of GHC's installation directories
 category: Development
-cabal-version: >= 1.4
-build-depends: base >= 3 && < 5
+cabal-version: >= 1.6
 build-type: Custom
 
-exposed-modules: GHC.Paths
+library
+        build-depends: base >= 3 && < 5
+        exposed-modules: GHC.Paths
+
+source-repository head
+  type:     darcs
+  location: http://darcs.haskell.org/ghc-paths
+
