--- a/ghc-paths.cabal
+++ b/ghc-paths.cabal
@@ -1,6 +1,6 @@
 name: ghc-paths
 version: 0.1.0.12
-x-revision: 6
+x-revision: 7
 license: BSD3
 license-file: LICENSE
 copyright: (c) Simon Marlow
@@ -15,6 +15,7 @@ build-type: Custom
 
 
 tested-with:
+  GHC == 9.12.2
   GHC == 9.10.2
   GHC == 9.8.4
   GHC == 9.6.7
@@ -31,7 +32,7 @@ tested-with:
 custom-setup
         setup-depends:
             base  >= 3   && < 5
-          , Cabal >= 1.6 && < 3.13
+          , Cabal >= 1.6 && < 3.15
           , directory
 
 library
